// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI: actions close overlay 1`] = `
Object {
  "type": "CLOSE_CLI_MODAL",
}
`;

exports[`CLI: actions open overlay 1`] = `
Object {
  "type": "OPEN_CLI_MODAL",
}
`;
